--- a/deploy/src/main/resources/static/index.html
+++ b/deploy/src/main/resources/static/index.html
@@ -11,5 +11,10 @@
         <li><a href="/login">로그인</a></li>
         <li><a href="/signup">회원가입</a></li>
     </ul>
+    <hr>
+    <ul>
+        <li><a href="/restLogin">로그인(REST)</a></li>
+        <li><a href="/restSignup">회원가입(REST)</a></li>
+    </ul>
 </body>
 </html>
