--- a/jpa-shoppy-fullstack-app/backend/src/main/resources/static/index.html
+++ b/jpa-shoppy-fullstack-app/backend/src/main/resources/static/index.html
@@ -5,6 +5,8 @@
     <title>Title</title>
 </head>
 <body>
-    <h1>shoppy project - backend</h1>
+<h1>Shoppy Project - Backend!!</h1>
+<h1>Shoppy Project - Backend!!</h1>
+<h1>Shoppy Project - Backend!!</h1>
 </body>
 </html>
